# document-agent-api

./: .dockerignore  .env.example  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: update-deploy-branch.yml
app/: __init__.py  main.py
docs/: API_KEY_PLAN.md  API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  SPEC.md  openapi.json
migrations/: env.py
migrations/versions/: 0001_create_documents_and_results.py  0002_add_file_data_to_documents.py  0003_add_users_and_document_owner.py  0004_move_document_payloads_to_object_storage.py  0005_create_user_api_keys.py  0006_create_parse_jobs.py  0007_add_parse_job_parser_backend.py  0007_parse_job_backend.py
src/: __init__.py  config.py  database.py  main.py  model_registry.py  parser_backends.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py
src/common/: errors.py  exception_handlers.py
src/documents/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/parse_jobs/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/queueing/: backends.py  dependencies.py
src/storage/: backends.py  dependencies.py
src/worker/: document_ai_entrypoint.py  main.py  parser.py  runner.py
tests/: conftest.py  test_config.py  test_system.py
tests/auth/: test_auth_dependencies.py  test_auth_models.py  test_auth_router.py  test_auth_service.py
tests/documents/: test_router.py  test_service.py
(+9 files in other folders)
