[project]
name = "document-agent-api"
version = "0.1.0"
description = "Document Agent API built with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.39",
    "fastapi[standard]>=0.135.1",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
